Fix scrollbars overflow bug

--- a/src/app/todo/todo-list/todo-list.component.scss
+++ b/src/app/todo/todo-list/todo-list.component.scss
@@ -28,13 +28,9 @@
     color: $accentGoodHover;
 }
 
-.todo-element-list {
-    height: 90vh;
-}
-
 .todo-element {
-    width: 98%;
-    height: 19.6%;
+    width: 97%;
+    height: 200px;
     padding-top: 1%;
     margin-left: 1%;
 }
