--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,5 @@ body {
     width: 100vw;
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
